# carebridges-backend

./: .gitignore  README.md  appspec.yml  pyproject.toml  run_db_init.py  used_packages.txt
.github/workflows/: deploy.yml
app/: main.py
app/api/: deps.py  routers.py
app/api/endpoints/: auth.py  chat.py  faq.py  user.py
app/core/: config.py
app/crud/: chat_crud.py  faq_crud.py  user_crud.py
app/db/: session.py
app/models/: __init__.py  chat.py  faq.py  password_reset_token.py  user.py
app/schemas/: auth.py  chat.py  faq.py  password_reset.py  user.py  user_v1.py
app/services/: chat_ai.py
app/utils/: jwt.py  mailer.py
scripts/: deploy.sh  start.sh  stop.sh
