[project]
name = "carebridges-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "kaeun0813"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (==0.116.1)",
    "passlib (==1.7.4)",
    "pydantic (==2.11.7)",
    "pydantic-settings (==2.10.1)",
    "python-jose (==3.5.0)",
    "sqlalchemy (==2.0.37)",
    "starlette (==0.47.2)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "gunicorn (>=23.0.0,<24.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
